--- a/client/src/UI/Home/slider/slider.css
+++ b/client/src/UI/Home/slider/slider.css
@@ -1,12 +1,13 @@
 .swiper {
     width: 100%;
-    height: 100%;
+    height: 15rem;
   }
 
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: rgb(174, 148, 148);
+
 
     /* Center slide text vertically */
     display: -webkit-box;
