--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+
 .fourfour {
     background-image: url(https://freefrontend.com/assets/img/html-funny-404-pages/SVG-Animation-404-Page.gif);
     height: 100vh;
@@ -10,3 +12,232 @@
 .fourfourtext h1 {
     text-align: center;
 }
+
+.breadsetacks {
+    display: flex;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    margin-top: 27px;
+    margin-left: 20px;
+}
+
+.breadsetacks p {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.main__screen {
+    margin-left: 20px;
+    margin-left: 20px;
+}
+
+.main__screen-content {
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.main__screen-leftblock img{
+    width: 605px;
+    height: 605px;
+}
+
+.main__screen-rightblock img{
+    width: 100%;
+    height: 100%;
+}
+
+.main__screen-rightblock {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  .breadsticks {
+    margin-left: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .breadsticks p {
+    padding-left: 30px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    color: #1B4B66;
+  }
+  .breadsticks p ::after {
+    content: "→";
+  }
+  
+  .first-screen {
+    width: 80%;
+    height: 605px;
+    margin-top: 45px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .first-screen__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .first-screen__left {
+    width: 50%;
+  }
+  .first-screen__left img {
+    width: 605px;
+    height: 605px;
+    -webkit-transition: all 1.8s ease 0s;
+    transition: all 1.8s ease 0s;
+  }
+  .first-screen__left img:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  .first-screen__right {
+    margin-left: 50px;
+    width: 50%;
+  }
+  .first-screen__right-top p:first-child {
+    color: #13101E;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 34px;
+    line-height: 44px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-top p:nth-child(2) {
+    color: #626262;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 26px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-top p:nth-child(3) {
+    color: #B6B6B6;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-top p:last-child {
+    width: 100px;
+    color: #171520;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-mid {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .first-screen__right-mid p:first-child {
+    color: #626262;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 26px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-mid p:nth-child(3) {
+    color: #626262;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 26px;
+    font-family: "Inter", sans-serif;
+  }
+  .first-screen__right-bottom {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .first-screen__right-bottom button {
+    background: hsl(0deg, 0%, 100%);
+    padding: 16px 24px;
+    position: relative;
+    width: 400px;
+    font-family: "Inter", sans-serif;
+    color: black;
+    border-radius: 8px;
+    -webkit-transition: all 0.8s ease 0s;
+    transition: all 0.8s ease 0s;
+    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.01);
+            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.01);
+  }
+  .first-screen__right-bottom button::after {
+    position: absolute;
+    content: "";
+    top: 15px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    -webkit-transform: scale(0.9) translateZ(0);
+            transform: scale(0.9) translateZ(0);
+    -webkit-filter: blur(15px);
+            filter: blur(15px);
+    background: -webkit-gradient(linear, right top, left top, from(#ff5770), color-stop(#e4428d), color-stop(#c42da8), color-stop(#9e16c3), color-stop(#6501de), color-stop(#9e16c3), color-stop(#c42da8), color-stop(#e4428d), to(#ff5770));
+    background: linear-gradient(to left, #ff5770, #e4428d, #c42da8, #9e16c3, #6501de, #9e16c3, #c42da8, #e4428d, #ff5770);
+    background-size: 200% 200%;
+    -webkit-animation: animateGlow 1.25s linear infinite;
+            animation: animateGlow 1.25s linear infinite;
+  }
+  .first-screen__right-bottom button:nth-child(2) {
+    margin-left: 50px;
+  }
+  .first-screen__right-bottom button:hover {
+    background-color: cadetblue;
+    color: white;
+  }
+  
+  @-webkit-keyframes animateGlow {
+    0% {
+      background-position: 0% 50%;
+    }
+    100% {
+      background-position: 200% 50%;
+    }
+  }
+  
+  @keyframes animateGlow {
+    0% {
+      background-position: 0% 50%;
+    }
+    100% {
+      background-position: 200% 50%;
+    }
+  }
