--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -904,3 +904,42 @@
     line-height: 20px;
   }
 }
+
+.like {
+  display: none;
+}
+
+
+.like + label {
+  position: relative;
+  padding-left: 35px;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.like + label:before {
+  content: "\1F5A4";
+  top: -11px;
+  left: -8px;
+  border: 1px solid transparent;    
+  padding: 10px;
+  border-radius: 3px;
+  display: block;
+  position: absolute;
+transition:  .5s ease;
+}
+
+.like:checked + label:before {
+  border: 1px solid transparent;
+  background-color: transparent;
+}
+
+.like:checked + label:after {
+  content: '\1F49B';
+  font-size: 18px;
+  position: absolute;
+  top: -1px;
+  left: 1px;
+color: gold;
+transition:  .5s ease;
+}
