--- a/client/src/UI/index.css
+++ b/client/src/UI/index.css
@@ -24,3 +24,24 @@ div {
     font-weight: 700;
     text-decoration: none;
 }
+
+.opasiti {
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    opacity: 0.9;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+
+.opasiti2 {
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
