--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -262,6 +262,7 @@ body {
     display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
+        margin-left: 140px;
     padding: 40px 80px 40px 80px;
   }
   .first-screen-profile-profile__leftblock {
@@ -274,9 +275,9 @@ body {
             flex-direction: column;
   }
   .first-screen-profile__leftblock-textarea {
-    width: 674px;
+    width: 600px;
     height: 200px;
-    margin-top: 101px;
+    margin-top: 100px;
   }
   .first-screen-profile__leftblock-textarea p {
     font-family: 'Rubik';    
