--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -726,7 +726,7 @@ body {
 }
 
 .item__info {
-  padding: 0 0.4rem;
+  padding: 0.6rem 0.4rem;
 }
 
 .item__title {
@@ -897,7 +897,6 @@ body {
     display: flex;
   }
   .first-screen-profile__link {
-    border-radius: 1rem;
     margin-right: 1rem;
   }
 
@@ -979,12 +978,16 @@ body {
 }
 
 .sliderBlock {
+  font-family: 'Rubik', sans-serif;
+
   margin-top: 30px;
   height: 200px;
   width: 400px;
   margin-left: 50px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
 }
 
 .sliderBlock p {
