--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -384,8 +384,9 @@ body {
   .stats__body {
     max-width: 100%;
   }
+
   .stats__content {
-    padding: 100px 190px 184px 190px;
+    padding: 100px 190px 130px 190px;
   }
   .stats__block {
     margin-left: auto;
@@ -856,6 +857,40 @@ body {
   content: "";
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+.intro__media2 {
+  z-index: 7;
+  position: absolute;
+  top: -12px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #ccc;
+  background-size: cover;
+}
+.intro__media2 video {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  -webkit-transform: translate(-50, 50%);
+          transform: translate(-50, 50%);
+  min-width: 100%;
+  min-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.intro__media2::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 .intro__content {
   z-index: 10;
   color: #fff;
@@ -975,6 +1010,10 @@ body {
   left: 46px;
   transition: .5s ease;
   color: rgb(211, 26, 26);
+}
+
+.slider-container {
+  padding: 0px 0px 40px 0px;
 }
 
 .sliderBlock {
