--- a/client/src/UI/index.css
+++ b/client/src/UI/index.css
@@ -28,8 +28,7 @@ div {
 .opasiti {
     height: 100vh;
     width: 100%;
-    background-color: black;
-    opacity: 0.9;
+    background-color: #0000006e;    
     position: fixed;
     top: 0px;
     left: 0px;
