--- a/client/src/UI/Home/slider/slider.css
+++ b/client/src/UI/Home/slider/slider.css
@@ -30,3 +30,9 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .overlay {
+    --gradient-color: rgb(37, 36, 36), rgba(255, 255, 255, 0);
+    --gradient-width: 200px;
+
+  }
