--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -861,7 +861,6 @@ body {
 .intro__media2 {
   z-index: 7;
   position: absolute;
-  top: -12px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -1014,6 +1013,11 @@ body {
 }
 
 .slider-container {
+  padding: 0px 0px 40px 0px;
+}
+
+.slider-container2 {
+  background-color: rgb(32,33, 36);
   padding: 0px 0px 40px 0px;
 }
 
